--- a/docs/style_guide.adoc
+++ b/docs/style_guide.adoc
@@ -1,6 +1,6 @@
 // vim: ft=asciidoc
 
-= Openshift-Ansible Style Guide
+= openshift-ansible Style Guide
 
 The purpose of this guide is to describe the preferred coding conventions used in this repository (both in ansible and python).
 
